src/test/deca/context/valid/ContextAvecObjet/ManipulationClasse/InClass/overridedMethodCalledInheritanceArg.deca
// Description:
//  Appel d'une méthode overrided avec un argument dans sa version originale
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(boolean a){
        if(!a){
            return 0;
        }
        return x;
    }

}

class B extends A {
    A a = new A();
    boolean b;
    int y = a.getX(b);

    int getX(boolean a){
        return -x;
    }
}




