src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/mauvaisReturnNonAtteint.deca
//Description
//  test d'une méthode devant retourner un int mais peut return un boolean nécessairement
//
//Résultat
//  Erreur contextuelle ligne 9
//  type incompatible

class A{
    int inutile(boolean a){
        if (a){
            return a;
        }
        return 1;
    }
}